--- a/TapeManager.csproj
+++ b/TapeManager.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="DocumentFormat.OpenXml.Framework" Version="3.3.0" />
     <PackageReference Include="ExcelNumberFormat" Version="1.1.0" />
+    <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="RBush" Version="4.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.9" />
   </ItemGroup>
